java:S4738 "Java features should be preferred to Guava" (replace ImmutableSet.of() by Set.of() and ImmutableMap.of() by Map.of())